objects/sumoapp__ProcessRelation__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Priority__c</fullName>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>sumoapp__Process__c</referenceTo>
        <relationshipLabel>Process Relations</relationshipLabel>
        <relationshipName>ProcessRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Relation__c</fullName>
        <label>Relation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>SUMO Scheduling Process Relation</label>
    <nameField>
        <displayFormat>SPR-{000000}</displayFormat>
        <label>Scheduling Process Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Scheduling Process Relations</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__Attending</fullName>
        <active>true</active>
        <label>Attending</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Category</fullName>
        <active>true</active>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Relation</fullName>
        <active>true</active>
        <label>Relation</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__ResourcePool</fullName>
        <active>true</active>
        <label>Resource Pool</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>